--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Agenda de Evenimente Locale</h1>
+    <h1>Agenda de de Evenimente Locale</h1>
     <nav>
       <ul>
         <li><a href="register.html">Înregistrare</a></li>
