--- a/Frontend/evenimente.html
+++ b/Frontend/evenimente.html
@@ -11,19 +11,17 @@
     <h2>Evenimente Locale</h2>
     <button id="logoutBtn">Logout</button>
   </nav>
-
-  <!-- Slider -->
   <div class="slider-container">
     <div class="slider-images">
       <img src="poze/1.jpg" alt="img1">
       <img src="poze/2.jpg" alt="img2">
       <img src="poze/3.jpg" alt="img3">
+      <img src="poze/4.jpg" alt="img4">
+      <img src="poze/5.jpg" alt="img5">
     </div>
     <button id="prev">⏪</button>
     <button id="next">⏩</button>
   </div>
-
-  <!-- Formular adăugare eveniment -->
   <section class="form-container">
     <form id="event-form">
       <input type="text" id="title" placeholder="Titlu eveniment" required>
@@ -32,10 +30,7 @@
       <button type="submit">Adaugă Eveniment</button>
     </form>
   </section>
-
-  <!-- Aici se afișează evenimentele -->
   <main class="events-container" id="events-ul">
-    <!-- Populat din JS -->
   </main>
 
   <script src="evenimente.js"></script>
