--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Autentificare</title>
+    <link rel="stylesheet" href="style.css">
+    </head>
 <body>
-    <div class="container mx-auto p-4 pt-6 mt-10 bg-white rounded shadow-md">
-        <h2 class="text-3xl font-bold mb-4">Înregistrare</h2>
-        <form id="register-form">
-          <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">Utilizator:</label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Utilizator" />
-          </div>
-          <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="email">Email:</label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email" />
-          </div>
-          <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Parolă:</label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="Parolă" />
-          </div>
-          <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="confirm-password">Confirmă parolă:</label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="confirm-password" type="password" placeholder="Confirmă parolă" />
-          </div>
-          <div class="flex items-center justify-between">
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">Înregistrare</button>
-          </div>
-        </form>
-      </div>
+    <header class="main-header">
+        <h1><a href="index.html">Agenda de Evenimente Locale</a></h1>
+        <nav class="main-nav">
+            <ul>
+                <li id="nav-register-link"><a href="register.html">Înregistrare</a></li>
+                <li id="nav-login-link"><a href="login.html">Autentificare</a></li>
+                <li><a href="evenimente.html">Evenimente</a></li>
+                <li><a href="profile.html">Profil</a></li>
+                <li id="nav-add-event-link" style="display:none;"><a href="adauga-eveniment.html">Adaugă Eveniment</a></li>
+                <li id="nav-logout-btn-container" style="display:none;"><button id="nav-logout-btn">Deconectare</button></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main class="login-page-content">
+        <div class="container mx-auto p-4 pt-6 mt-10 bg-white rounded shadow-md form-container">
+            <h2 class="text-3xl font-bold mb-4">Autentificare</h2>
+            <form id="login-form"> <div class="mb-4">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="email-phone">Email sau Telefon:</label>
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email-phone" type="text" placeholder="Email sau Număr de Telefon" required />
+                </div>
+                <div class="mb-6">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Parolă:</label>
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="Parolă" required />
+                </div>
+                <div class="flex items-center justify-between">
+                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">Autentificare</button>
+                    <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="register.html">
+                        Nu ai cont? Înregistrează-te
+                    </a>
+                </div>
+            </form>
+        </div>
+    </main>
+
+    <script src="main.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
