--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda Evenimente Locale</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css"/> 
 </head>
 <body>
     <header class="main-header">
@@ -44,5 +45,6 @@
     </main>
 
     <script src="main.js"></script>
+    <script src="lumin.js"></script>
 </body>
 </html>
