--- a/Frontend/evenimente.html
+++ b/Frontend/evenimente.html
@@ -19,14 +19,19 @@
       <img src="poze/4.jpg" alt="img4">
       <img src="poze/5.jpg" alt="img5">
     </div>
-    <button id="prev">⏪</button>
-    <button id="next">⏩</button>
+<button id="prev">⬅️</button>
+<button id="next">➡️</button>
+
   </div>
   <section class="form-container">
     <form id="event-form">
       <input type="text" id="title" placeholder="Titlu eveniment" required>
       <input type="date" id="date" required>
       <textarea id="description" placeholder="Descriere" required></textarea>
+        <label for="event-photo" style="cursor: pointer; background-color: #007bff; color: white; padding: 6px 12px; border-radius: 4px; display: inline-block; margin-bottom: 10px;">
+      Încarcă Poză
+    </label>
+    <input type="file" id="event-photo" name="event-photo" accept="image/*" style="display: none;">
       <button type="submit">Adaugă Eveniment</button>
     </form>
   </section>
