--- a/Frontend/evenimente.html
+++ b/Frontend/evenimente.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Evenimente Locale</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" herf="style3.css">
+  <link rel="stylesheet" herf="style2.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -28,9 +32,32 @@
       <input type="text" id="title" placeholder="Titlu eveniment" required>
       <input type="date" id="date" required>
       <textarea id="description" placeholder="Descriere" required></textarea>
-        <label for="event-photo" style="cursor: pointer; background-color: #007bff; color: white; padding: 6px 12px; border-radius: 4px; display: inline-block; margin-bottom: 10px;">
-      Încarcă Poză
-    </label>
+    <div class="max-w-4xl w-full p-6 bg-white rounded-xl shadow-lg">
+        <h1 class="text-3xl font-bold text-gray-800 mb-6 text-center">Adaugă Imagini pentru Anunț</h1>
+
+        <div class="border-2 border-dashed border-gray-300 rounded-lg p-6 text-center mb-6 hover:border-indigo-500 transition-all cursor-pointer" id="drop-area">
+            <input type="file" id="file-input" multiple accept="image/*" class="hidden">
+            <p class="text-gray-600 mb-4">Trage și plasează imagini aici sau</p>
+            <button id="upload-button" class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white font-semibold py-3 px-6 rounded-lg shadow-md hover:from-indigo-600 hover:to-purple-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block mr-2" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
+                </svg>
+                Încarcă Imagini
+            </button>
+        </div>
+
+        <div id="preview-container" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+            <!-- Previzualizările imaginilor vor fi adăugate aici dinamic -->
+        </div>
+
+        <!-- Caseta de mesaje personalizată -->
+        <div id="message-box" class="message-box"></div>
+    </div>
+
+    <!-- Overlay pentru încărcare (Loading Spinner) -->
+    <div id="loading-overlay" class="loading-overlay">
+        <div class="spinner"></div>
+    </div>
     <input type="file" id="event-photo" name="event-photo" accept="image/*" style="display: none;">
       <button type="submit">Adaugă Eveniment</button>
     </form>
