--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda Evenimente Locale</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css"/> 
 </head>
 <body>
     <header class="main-header">
@@ -15,10 +16,14 @@
                 <li id="nav-login-link"><a href="login.html">Autentificare</a></li>
                 <li><a href="evenimente.html">Evenimente</a></li>
                 <li><a href="profile.html">Profil</a></li>
+                <li id="nav-add-event-link" style="display:none;"><a href="adauga-eveniment.html">Adaugă Eveniment</a></li>
                 <li id="nav-logout-btn-container" style="display:none;"><button id="nav-logout-btn">Deconectare</button></li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle-btn">
-                        <span class="icon">☀️</span> <span class="text">Mod Întunecat</span>
+                        <span class="icon">☼</span> 
+                    </button>
+                     <button id="theme-toggle" class="theme-toggle-btn">
+                        <span class="icon">☾</span> 
                     </button>
                 </li>
             </ul>
@@ -41,6 +46,8 @@
             <p>Înregistrează-te pentru a adăuga propriile evenimente, a gestiona profilul tău și a interacționa cu comunitatea!</p>
         </section>
     </main>
+
     <script src="main.js"></script>
+    <script src="lumin.js"></script>
 </body>
 </html>
