--- a/Frontend/evenimente.html
+++ b/Frontend/evenimente.html
@@ -23,8 +23,8 @@
       <img src="poze/4.jpg" alt="img4">
       <img src="poze/5.jpg" alt="img5">
     </div>
-<button id="prev">⬅️</button>
-<button id="next">➡️</button>
+<button id="prev">‹</button>
+<button id="next">›</button>
 
   </div>
   <section class="form-container">
