--- a/Frontend/evenimente.html
+++ b/Frontend/evenimente.html
@@ -13,6 +13,14 @@
 
   <nav class="navbar">
     <h2>Evenimente Locale</h2>
+    <li>
+                    <button id="theme-toggle" class="theme-toggle-btn">
+                        <span class="icon">☼</span> 
+                    </button>
+                     <button id="theme-toggle" class="theme-toggle-btn">
+                        <span class="icon">☾</span> 
+                    </button>
+                </li>
     <button id="logoutBtn">Logout</button>
   </nav>
   <div class="slider-container">
