--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -39,7 +39,69 @@
                 <a href="login.html" id="login-link-main"><button>Autentifică-te</button></a>
             </div>
         </section>
+                    <section>
+                         <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Peisaj+Munte" alt="Peisaj cu munți">
+        <p class="descriere-imagine">O panoramă uimitoare a munților, cu vârfuri acoperite de zăpadă și cer senin.</p>
+    </div>
 
+    <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Floare+Exotica" alt="Floare exotică">
+        <p class="descriere-imagine">O floare rară și vibrantă, cu petale delicate și culori intense, specifică zonelor tropicale.</p>
+    </div>
+
+    <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Oraș+Noaptea" alt="Oraș noaptea">
+        <p class="descriere-imagine">Vedere nocturnă a unui oraș aglomerat, luminile clădirilor reflectându-se pe asfaltul umed.</p>
+    </div>
+
+     <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Peisaj+Munte" alt="Peisaj cu munți">
+        <p class="descriere-imagine">O panoramă uimitoare a munților, cu vârfuri acoperite de zăpadă și cer senin.</p>
+    </div>
+
+    <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Floare+Exotica" alt="Floare exotică">
+        <p class="descriere-imagine">O floare rară și vibrantă, cu petale delicate și culori intense, specifică zonelor tropicale.</p>
+    </div>
+
+    <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Oraș+Noaptea" alt="Oraș noaptea">
+        <p class="descriere-imagine">Vedere nocturnă a unui oraș aglomerat, luminile clădirilor reflectându-se pe asfaltul umed.</p>
+    </div>
+
+
+     <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Peisaj+Munte" alt="Peisaj cu munți">
+        <p class="descriere-imagine">O panoramă uimitoare a munților, cu vârfuri acoperite de zăpadă și cer senin.</p>
+    </div>
+
+    <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Floare+Exotica" alt="Floare exotică">
+        <p class="descriere-imagine">O floare rară și vibrantă, cu petale delicate și culori intense, specifică zonelor tropicale.</p>
+    </div>
+
+    <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Oraș+Noaptea" alt="Oraș noaptea">
+        <p class="descriere-imagine">Vedere nocturnă a unui oraș aglomerat, luminile clădirilor reflectându-se pe asfaltul umed.</p>
+    </div>
+
+
+     <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Peisaj+Munte" alt="Peisaj cu munți">
+        <p class="descriere-imagine">O panoramă uimitoare a munților, cu vârfuri acoperite de zăpadă și cer senin.</p>
+    </div>
+
+    <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Floare+Exotica" alt="Floare exotică">
+        <p class="descriere-imagine">O floare rară și vibrantă, cu petale delicate și culori intense, specifică zonelor tropicale.</p>
+    </div>
+
+    <div class="imagine-container">
+        <img src="https://via.placeholder.com/300x200?text=Oraș+Noaptea" alt="Oraș noaptea">
+        <p class="descriere-imagine">Vedere nocturnă a unui oraș aglomerat, luminile clădirilor reflectându-se pe asfaltul umed.</p>
+    </div>
+                    </section>
         <section class="about-section">
             <h2>Despre Agenda Evenimente Locale</h2>
             <p>Platforma noastră îți aduce la îndemână cele mai interesante evenimente locale din orașul tău. Fie că ești pasionat de concerte, expoziții de artă, târguri tradiționale sau evenimente sportive, aici vei găsi mereu ceva pe placul tău.</p>
@@ -49,5 +111,6 @@
 
     <script src="main.js"></script>
     <script src="lumin.js"></script>
+    <script src="path/to/your/foto.js"></script>
 </body>
 </html>
