--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -41,67 +41,80 @@
             </div>
         </section>
                     <section>
-                         <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Peisaj+Munte" alt="Peisaj cu munți">
-        <p class="descriere-imagine">O panoramă uimitoare a munților, cu vârfuri acoperite de zăpadă și cer senin.</p>
+               <div id="lista-evenimente">
+        <div class="eveniment" data-order="1">
+            <img src="https://via.placeholder.com/300x200?text=Concert+Rock" alt="Concert Rock">
+            <h3>Concert Rock la Arene</h3>
+            <p>Data: 15 Iulie 2025</p>
+            <p>Locație: Arenele Romane</p>
+            <p>Descriere: O seară incendiară cu trupe rock locale și internaționale.</p>
+        </div>
+
+        <div class="eveniment" data-order="2">
+            <img src="https://via.placeholder.com/300x200?text=Expozitie+Arta" alt="Expozitie Arta">
+            <h3>Expoziție de Artă Modernă</h3>
+            <p>Data: 20 Iulie 2025</p>
+            <p>Locație: Galeria Națională</p>
+            <p>Descriere: Descoperă cele mai noi creații ale artiștilor contemporani.</p>
+        </div>
+
+        <div class="eveniment" data-order="3">
+            <img src="https://via.placeholder.com/300x200?text=Festival+Mancare" alt="Festival Mancare">
+            <h3>Festivalul Gusturilor Locale</h3>
+            <p>Data: 25-27 Iulie 2025</p>
+            <p>Locație: Parcul Central</p>
+            <p>Descriere: O celebrare a gastronomiei locale cu bucătari renumiți.</p>
+        </div>
+
+        <div class="eveniment" data-order="4">
+            <img src="https://via.placeholder.com/300x200?text=Workshop+Coding" alt="Workshop Coding">
+            <h3>Workshop de Programare Web</h3>
+            <p>Data: 1 August 2025</p>
+            <p>Locație: Centrul de Inovație</p>
+            <p>Descriere: Învață bazele dezvoltării web de la experți din domeniu.</p>
+        </div>
+
+        <div class="eveniment" data-order="5">
+            <img src="https://via.placeholder.com/300x200?text=Seara+Filmelor" alt="Seara Filmelor">
+            <h3>Seara Filmelor în Aer Liber</h3>
+            <p>Data: 5 August 2025</p>
+            <p>Locație: Lacul Morii</p>
+            <p>Descriere: Proiecții de filme clasice sub clar de lună.</p>
+        </div>
+
+        <div class="eveniment" data-order="6">
+            <img src="https://via.placeholder.com/300x200?text=Maraton+Caritate" alt="Maraton Caritate">
+            <h3>Maraton Caritabil pentru Copii</h3>
+            <p>Data: 10 August 2025</p>
+            <p>Locație: Piața Unirii</p>
+            <p>Descriere: Aleargă pentru o cauză nobilă și ajută copiii aflați în nevoie.</p>
+        </div>
+
+        <div class="eveniment" data-order="7">
+            <img src="https://via.placeholder.com/300x200?text=Targ+Carti" alt="Targ Carti">
+            <h3>Târgul de Carte Anual</h3>
+            <p>Data: 15-18 August 2025</p>
+            <p>Locație: Palatul Parlamentului</p>
+            <p>Descriere: Oportunitatea de a descoperi noi titluri și autori preferați.</p>
+        </div>
+
+        <div class="eveniment" data-order="8">
+            <img src="https://via.placeholder.com/300x200?text=Demonstratie+Culinara" alt="Demonstratie Culinara">
+            <h3>Demonstrație Culinară</h3>
+            <p>Data: 20 August 2025</p>
+            <p>Locație: Centrul Gastronomic</p>
+            <p>Descriere: Vezi cum pregătesc bucătarii renumiți cele mai delicioase rețete.</p>
+        </div>
+
+        <div class="eveniment" data-order="9">
+            <img src="https://via.placeholder.com/300x200?text=Spectacol+Teatru" alt="Spectacol Teatru">
+            <h3>Premieră Spectacol de Teatru</h3>
+            <p>Data: 25 August 2025</p>
+            <p>Locație: Teatrul Național</p>
+            <p>Descriere: O piesă de teatru captivantă, plină de emoție și suspans.</p>
+        </div>
     </div>
 
-    <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Floare+Exotica" alt="Floare exotică">
-        <p class="descriere-imagine">O floare rară și vibrantă, cu petale delicate și culori intense, specifică zonelor tropicale.</p>
-    </div>
-
-    <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Oraș+Noaptea" alt="Oraș noaptea">
-        <p class="descriere-imagine">Vedere nocturnă a unui oraș aglomerat, luminile clădirilor reflectându-se pe asfaltul umed.</p>
-    </div>
-
-     <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Peisaj+Munte" alt="Peisaj cu munți">
-        <p class="descriere-imagine">O panoramă uimitoare a munților, cu vârfuri acoperite de zăpadă și cer senin.</p>
-    </div>
-
-    <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Floare+Exotica" alt="Floare exotică">
-        <p class="descriere-imagine">O floare rară și vibrantă, cu petale delicate și culori intense, specifică zonelor tropicale.</p>
-    </div>
-
-    <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Oraș+Noaptea" alt="Oraș noaptea">
-        <p class="descriere-imagine">Vedere nocturnă a unui oraș aglomerat, luminile clădirilor reflectându-se pe asfaltul umed.</p>
-    </div>
-
-
-     <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Peisaj+Munte" alt="Peisaj cu munți">
-        <p class="descriere-imagine">O panoramă uimitoare a munților, cu vârfuri acoperite de zăpadă și cer senin.</p>
-    </div>
-
-    <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Floare+Exotica" alt="Floare exotică">
-        <p class="descriere-imagine">O floare rară și vibrantă, cu petale delicate și culori intense, specifică zonelor tropicale.</p>
-    </div>
-
-    <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Oraș+Noaptea" alt="Oraș noaptea">
-        <p class="descriere-imagine">Vedere nocturnă a unui oraș aglomerat, luminile clădirilor reflectându-se pe asfaltul umed.</p>
-    </div>
-
-
-     <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Peisaj+Munte" alt="Peisaj cu munți">
-        <p class="descriere-imagine">O panoramă uimitoare a munților, cu vârfuri acoperite de zăpadă și cer senin.</p>
-    </div>
-
-    <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Floare+Exotica" alt="Floare exotică">
-        <p class="descriere-imagine">O floare rară și vibrantă, cu petale delicate și culori intense, specifică zonelor tropicale.</p>
-    </div>
-
-    <div class="imagine-container">
-        <img src="https://via.placeholder.com/300x200?text=Oraș+Noaptea" alt="Oraș noaptea">
-        <p class="descriere-imagine">Vedere nocturnă a unui oraș aglomerat, luminile clădirilor reflectându-se pe asfaltul umed.</p>
-    </div>
                     </section>
         <section class="about-section">
             <h2>Despre Agenda Evenimente Locale</h2>
@@ -112,6 +125,7 @@
 
     <script src="main.js"></script>
     <script src="lumin.js"></script>
-    <script src="path/to/your/foto.js"></script>
+    <script src="foto.js"></script>
+
 </body>
 </html>
