--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -41,6 +41,11 @@
             </div>
         </section>
                     <section>
+                          <h1>Evenimente Recente</h1>
+
+    <div id="evenimente-container">
+        </div>
+        
                <div id="lista-evenimente">
         <div class="eveniment" data-order="1">
             <img src="https://via.placeholder.com/300x200?text=Concert+Rock" alt="Concert Rock">
@@ -126,6 +131,6 @@
     <script src="main.js"></script>
     <script src="lumin.js"></script>
     <script src="foto.js"></script>
-
+    <script src="even.js"></script>
 </body>
 </html>
