--- a/Frontend/evenimente.html
+++ b/Frontend/evenimente.html
@@ -22,6 +22,8 @@
                     </button>
                 </li>
     <button id="logoutBtn">Logout</button>
+    <a href="index.html" class="btn-inapoi">←</a>
+
   </nav>
   <div class="slider-container">
     <div class="slider-images">
