--- a/Frontend/profile.html
+++ b/Frontend/profile.html
@@ -18,6 +18,8 @@
         <li id="nav-add-event-link" style="display:none;"><a href="adauga-eveniment.html">Adaugă Eveniment</a></li>
         <li id="nav-logout-btn-container" style="display:none;">
           <button id="nav-logout-btn">Deconectare</button>
+          <a href="index.html" class="btn-inapoi">←</a>
+
         </li>
       </ul>
     </nav>
